# scrawl

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: sync_opcodes.py
src/scrawl/: __main__.py  cli.py  decompiler.py  errors.py  formatting.py  generate.py  inspect.py  io.py  model.py  modify.py  validate.py
src/scrawl/compiler/: __init__.py  ast_nodes.py  codegen.py  errors.py  lexer.py  parser.py  registry.py  registry_data.py  tokens.py
tests/: conftest.py  test_cli.py  test_compiler_codegen.py  test_compiler_integration.py  test_compiler_lexer.py  test_compiler_parser.py  test_compiler_registry.py  test_decompiler.py  test_generate.py  test_inspect.py  test_io.py  test_model.py  test_modify.py  test_validate.py
