[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrawl"
version = "0.1.0"
description = "Scrawl — write Scratch 3.0 projects as text"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
rich = ["rich>=13.0"]
dev = ["pytest>=7.0", "rich>=13.0"]

[project.scripts]
scrawl = "scrawl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
